参考了`github.com/gogf/gf/contrib/config/apollo/v2`,在其基础上做了优化，可同时支持多种格式的namespace。

--- a/demo/config.yaml
+++ b/demo/config.yaml
@@ -3,6 +3,9 @@ apollo:
   Cluster: "dev"
   IP: "http://localhost:8080"
   NamespaceName: "application,test.yaml"
+  IsBackupConfig: false
+  BackupConfigPath: ""
+  Secret: ""
+  SyncServerTimeout: 0
   MustStart: true
-  apolloNotDefaultNamespaceKeyMap:
-    test.yaml: "server,logger,redis,database"
+  Watch: true
